ops/istio/httproute-booking.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-booking
  namespace: booking-service
spec:
  parentRefs:
  - name: internal-lb-gateway-core
    namespace: istio-system
  hostnames: 
    - apis.myhandymanpro.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: svc-booking-service
      port: 5000
