ops/istio/httproute-kiali.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-core
  namespace: istio-system
spec:
  parentRefs:
  - name: internal-lb-gateway-core
    namespace: istio-system
  hostnames: 
    - kiali.myhandymanpro.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
